<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Relative"
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A008F3"
    android:backgroundTint="#DA78EC"
    tools:context=".MainActivity">

    <Space
        android:id="@+id/space1"
        android:layout_width="335dp"
        android:layout_height="32dp"
        android:layout_toLeftOf="@id/spaceright"
        android:layout_toRightOf="@id/spaceleft" />

    <Space
        android:id="@+id/spaceleft"
        android:layout_width="36dp"
        android:layout_height="match_parent" />

    <Space
        android:id="@+id/spaceright"
        android:layout_width="36dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space1"
        android:layout_toLeftOf="@id/spaceright"
        android:layout_toRightOf="@id/spaceleft"
        android:gravity="center"
        android:text="@string/textView2"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_toLeftOf="@id/spaceright"
        android:layout_toRightOf="@id/spaceleft"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUnJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="inicioJuego"
            android:layout_weight="1"
            android:text="@string/btnUnJugador" />

        <Button
            android:id="@+id/btnDosJugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnDosJugadores" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupDificultad"
        android:layout_width="191dp"
        android:layout_height="149dp"
        android:layout_below="@id/linear1"
        android:layout_toLeftOf="@id/spaceright"
        android:layout_toRightOf="@id/spaceleft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17">

        <RadioButton
            android:id="@+id/rbFacil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbFacil" />

        <RadioButton
            android:id="@+id/rbDificil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbDificil" />

        <RadioButton
            android:id="@+id/rbExtremo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rbExtremo" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="410dp"
        android:layout_height="52dp"
        android:layout_below="@id/radioGroupDificultad"
        android:layout_toLeftOf="@id/spaceright"
        android:layout_toRightOf="@id/spaceleft"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button2" />

        <ImageButton
            android:id="@+id/btn_sonido"
            android:layout_width="13dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="playpause"
            app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear2"
        android:layout_toLeftOf="@id/spaceright"
        android:layout_toRightOf="@id/spaceleft">

        <ImageView
            android:id="@+id/a1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="toqueCasilla"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/a2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="toqueCasilla"
            android:layout_marginEnd="5dp"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/a3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="toqueCasilla"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="toqueCasilla"
            android:layout_marginBottom="5dp"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="toqueCasilla"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/b3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="toqueCasilla"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="toqueCasilla"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="toqueCasilla"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/c3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="toqueCasilla"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/casilla"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.gridlayout.widget.GridLayout>
</RelativeLayout>